--- a/ava_conf.yaml
+++ b/ava_conf.yaml
@@ -6,7 +6,7 @@ TRAIN:
   CHECKPOINT_PERIOD: 1
   AUTO_RESUME: True
   CHECKPOINT_FILE_PATH:  SLOWFAST_64x2_R101_50_50.pkl
-  CHECKPOINT_TYPE: caffe2
+  CHECKPOINT_TYPE: pytorch
 DATA:
   NUM_FRAMES: 64
   SAMPLING_RATE: 2
@@ -85,6 +85,8 @@ DEMO:
   COMMON_CLASS_THRES: 0.7
   UNCOMMON_CLASS_THRES: 0.3
   VIS_MODE: thres
+  NUM_VIS_INSTANCES: 1
+
 #  VIS_MODE: top-k
 # TENSORBOARD:
 #  MODEL_VIS:
