--- a/ava_conf.yaml
+++ b/ava_conf.yaml
@@ -69,7 +69,7 @@ OUTPUT_DIR: .
 DEMO:
   ENABLE: True
   OUTPUT_FILE: test_output.mp4
-  LABEL_FILE_PATH: ava_classnames.json
+  LABEL_FILE_PATH: "SlowFast/ava_classnames.json"
   INPUT_VIDEO: test.mp4  # Path to a video file or image folder
   COMMON_CLASS_NAMES: [
     "watch (a person)",
