--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deep_sort"]
 	path = deep_sort
-	url = https://github.com/nwojke/deep_sort.git
+	url = https://github.com/Pangoraw/deep_sort.git
