--- a/ava_conf.yaml
+++ b/ava_conf.yaml
@@ -67,6 +67,8 @@ NUM_SHARDS: 1
 RNG_SEED: 0
 OUTPUT_DIR: .
 DEMO:
+  SCORES_FILE_PATH: SlowFast/scores.csv
+  PREDICTIONS_FILE_PATH: predictions.json
   DETECTRON2_THRESH: 0.75
   DETECTRON2_CFG: COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml
   DETECTRON2_WEIGHTS: detectron2://COCO-Detection/faster_rcnn_R_50_FPN_3x/137849458/model_final_280758.pkl
@@ -75,7 +77,7 @@ DEMO:
   ENABLE: True
   THREAD_ENABLE: False
   OUTPUT_FILE: test_output.mp4
-  LABEL_FILE_PATH: "SlowFast/ava_classnames.json"
+  LABEL_FILE_PATH: SlowFast/ava_classnames.json
   INPUT_VIDEO: ur.mp4  # Path to a video file or image folder
   COMMON_CLASS_NAMES: [
     "watch (a person)",
